--- a/app/menu.html
+++ b/app/menu.html
@@ -13,7 +13,11 @@
 
 <form id="options" class="form-style-7">
     <ul>
-        <li>
+        <li id="error" style="display: none;">
+            <p id="errMsg" style="color: red;"></p>
+            <button id="installBtn" type="button" style="margin-bottom: 10px; display: none;" class="btn btn-primary">Install Host Binary</button>
+        </li>
+        <li id="keyStatus">
             <label for="status">Key Status</label>
             <input id="status" type="text" name="profileName" value="No keys generated." disabled>
             <span id="expiration">Login to AWS via SSO</span>
@@ -22,7 +26,6 @@
     </ul>
 </form>
 
-<button id="installBtn" type="button" style="margin-bottom: 10px; display: none;" class="btn btn-primary">Install</button>
 <div class="btn-grp">
     <button style="float: left;" id="collapseBtn"><i class="fa fa-cog"></i></button>
     <button style="float: left;" id="helpBtn"><i class="fa fa-question-circle"></i></button>
@@ -46,6 +49,14 @@
                 <label for="region">Region</label>
                 <input id="region" type="text" name="region" value="us-west-1">
                 <span>Preferred profile region</span>
+            </li>
+            <li>
+                <label for="notify">Notifications</label>
+                <select name="notify" id="notify">
+                    <option value="enabled" selected>Enabled</option>
+                    <option value="disabled">Disabled</option>
+                </select>
+                <span>Display key status notifications</span>
             </li>
             <li>
                 <button id="save" type="button" class="btn btn-primary">Save</button>
